<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources>
<resources>
    <string name="app_name">animator</string>
    <string name="title_activity_host_settings">Host settings</string>
    <string name="title_activity_log">Log</string>
    <string name="title_activity_camera_settings">Camera settings</string>
    <string name="title_activity_project_settings">Project settings</string>
    <string name="title_activity_about">About</string>

    <string name="action_make_movie">Make movie</string>
    <string name="action_manage_projects">Manage projects</string>
    <string name="action_create_project">Create a new project</string>
    <string name="action_rename_project">Rename this project</string>
    <string name="action_clear_project">Clear this project</string>
    <string name="action_open_project">Open another project</string>
    <string name="action_project_settings">Project settings&#8230;</string>
    <string name="action_host_settings">Host settings&#8230;</string>
    <string name="action_camera_settings">Camera settings&#8230;</string>
    <string name="action_about">About&#8230;</string>
    <string name="action_watch_log">Watch log&#8230;</string>
    <string name="action_watch_movie">Watch the movie&#8230;</string>

    <string name="dialog_clear_project">
        You are about to delete all of this project. Are you sure?
    </string>

    <string name="positive">Okay</string>
    <string name="negative">Cancel</string>

    <string name="shot">Shot</string>
    <string name="focus">Focus</string>
    <string name="focus_area_settings">Focus area settings</string>

    <string name="version_title">Version</string>
    <string name="version_dummy">x.y.z</string>
    <string name="authors_website_title">Author\'s Website</string>
    <string name="url">
        http://neko-daisuki.ddo.jp/~SumiTomohiko/index.html
    </string>
    <string name="license_title">License</string>
    <string name="license">
        Copyright &#169; 2013 Tomohiko Sumi\n\
\n\
Permission is hereby granted, free of charge, to any person obtaining a copy of
this software and associated documentation files (the \&quot;Software\&quot;),
to deal in the Software without restriction, including without limitation the
rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is furnished
to do so, subject to the following conditions:\n\
\n\
The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.\n\
\n\
THE SOFTWARE IS PROVIDED \&quot;AS IS\&quot;, WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO
EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
    </string>
</resources>
<!--
vim: tabstop=4 shiftwidth=4 expandtab softtabstop=4
-->
