<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE ScrollView>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_title"/>
            <TextView
                android:id="@+id/version"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/version_dummy"
                android:gravity="right"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authors_website_title"/>
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/url"
                android:gravity="right"
                android:autoLink="web"/>
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_title"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:text="@string/license"/>
    </LinearLayout>
</ScrollView>
<!--
vim: tabstop=4 shiftwidth=4 expandtab softtabstop=4
-->
